// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConnectedApp maps store state to the props 1`] = `
<FavouritesList
  points={
    Array [
      Object {
        "details": Object {
          "house": "Night's Watch",
          "name": "The Wall",
          "words": "Night gathers, and now my watch begins.",
        },
        "favourite": true,
        "id": 1,
        "x": 450,
        "y": 110,
      },
      Object {
        "details": Object {
          "house": "Stark",
          "name": "Winterfell",
          "words": "Winter is Coming",
        },
        "favourite": false,
        "id": 2,
        "x": 375,
        "y": 355,
      },
    ]
  }
  remove={[Function]}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
  storeSubscription={
    Subscription {
      "listeners": Object {
        "clear": [Function],
        "get": [Function],
        "notify": [Function],
        "subscribe": [Function],
      },
      "onStateChange": [Function],
      "parentSub": undefined,
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "unsubscribe": [Function],
    }
  }
/>
`;

exports[`FavouritesList When there are points matches the snapshot 1`] = `
<div>
  <h3>
    Favourites
  </h3>
  <ul>
    <li
      key="1"
    >
      <button
        onClick={[Function]}
      >
        ×
      </button>
      <span>
        The Wall
      </span>
    </li>
  </ul>
</div>
`;

exports[`FavouritesList when there are no points matches the snapshot 1`] = `
<div>
  <h3>
    Favourites
  </h3>
  <ul />
</div>
`;
